fix: spacing on donate page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -193,15 +193,21 @@ footer {
 	color: var(--light-blue);
 }
 .donate-content-div {
-	min-height: 20rem;
-	display: flex;
+	min-height: 23rem;
+	width: 100%;
 	height: 100%;
+	display: flex;
 	flex-direction: column;
-	h2 {
-		margin-top: 1rem;
-	}
-	p {
-		margin-top: 0.5rem;
+	justify-content: center;
+	.donate-content-div-inner {
+		margin: 4rem 0rem;
+		max-width: 55rem;
+		.section {
+			margin: 2rem 0;
+			h2 {
+				margin-bottom: 0.4rem;
+			}
+		}
 	}
 }
 .acknowledgements {
